# rockhip_bootable_recovery

./: .gitmodules  Android.mk  CMakeLists.txt  arm64-android.cmake  device.cpp  install.cpp  recovery.cpp  rktools.cpp  rktools.h  roots.cpp  sdboot.cpp  sdboot.h  test_update.cpp
bootloader_message/include/bootloader_message/: bootloader_message.h
etc/: init.rc
minui/: Android.mk  graphics_drm.cpp  graphics_fbdev.cpp
mtdutils/: Android.mk
rkavvin/: RkAvvinApi.h
rkavvin/avvin/: Android.mk
rkupdate/: Android.mk  CMakeLists.txt  DefineHeader.h  RKAndroidDevice.cpp  RKAndroidDevice.h  RKBoot.cpp  RKBoot.h  RKComm.cpp  RKComm.h  RKDevice.cpp  RKDevice.h  RKLog.cpp  RKLog.h  RKSparse.cpp  RKSparse.h  Upgrade.cpp  Upgrade.h  gpt.h
tests/: Android.mk
update_verifier/: update_verifier.cpp
updater/: Android.mk  install.cpp  updater.cpp
